2014-08-08  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* char_routines.c: Compute checksum as in Web2C version.
	* ligkern_routines.[ch], list_routines.[ch]: Handle very long
	ligature programs.

	* yannis.test, tests/arabicr.pl, tests/arabic.ovp (new):
	Shell script and data for a new test.
	* Makefile.am: Add the new test.

2014-08-05  Peter Breitenlohner  <peb@mppmu.mpg.de>

	General cleanup.
	* char_routines.[ch], dimen_routines.[ch], error_routines.[ch],
	font_routines.[ch], header_routines.[ch], ligkern_routines.[ch],
	list_routines.[ch], omfonts.[ch], out_ofm.[ch],
	out_routines.[ch], param_routines.[ch], parse_ofm.[ch],
	print_routines.[ch]: Drop unused code.
	Declare functions with file scope as static.

2014-08-04  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* char_routines.c: Compute checksum.
	* header_routines.[ch]: Drop more unused code.
	* shorten.test, tests/realnum.out, tests/repeat.opl,
	tests/repeated.opl, tests/sample.{out,ovp}, tests/shorten.opl:
	Always use computed checksum.

2014-08-03  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dimen_routines.c (set_indices): Fixed a dimen rounding bug.
	* header_routines.[ch]: Drop unused code.
	Always output SEVENBITSAFEFLAG for TFM files.
	* shorten.test, tests/shorten.opl, (new): Shell script and data
	for a new test.
	* Makefile.am: Add the new test.

2014-08-02  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dimen_routines.c: Fixed a bug in the computation of nw, nh,
	nd, and ni.

2014-07-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* char_routines.c, ligkern_routines.c, omfonts.c,
	param_routines.c, parse_ofm.c: Allow char codes 10000..10FFFF
	from Supplementary Unicode Planes.

2014-07-09  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Drop Automake conditional OMFONTS.
	* ofonts.test, overbmp.test, tests/ofont*, tests/inbmp.opl,
	tests/overbmp.* (new): Shell scripts and data for new tests.

2013-12-06  Peter Breitenlohner  <peb@mppmu.mpg.de>
