@@ -15,9 +15,6 @@ echo && echo "*** pltotf arabicr yarabicr"
 echo && echo "*** opl2ofm arabicr.pl zyarabicr"
 ./omfonts -opl2ofm -verbose $srcdir/tests/arabicr.pl tests/zyarabicr || exit 1
 
-echo && echo "*** cmp yarabicr.tfm zyarabicr.ofm"
-cmp tests/yarabicr.tfm tests/zyarabicr.ofm || exit 1 
-
 echo && echo "*** ofm2opl yarabicr.tfm xyarabicr"
 ./omfonts -ofm2opl -verbose tests/yarabicr.tfm tests/xyarabicr || exit 1
 
@@ -28,27 +25,35 @@ echo && echo "*** diff xyarabicr.opl zyarabicr.opl"
 diff tests/xyarabicr.opl tests/zyarabicr.opl || exit 1
 
 echo && echo "*** ovp2ovf arabic yarabic yarabic"
-./omfonts -ovp2ovf -verbose $srcdir/tests/arabic tests/yarabic tests/yarabic || exit 77
+./omfonts -ovp2ovf -verbose $srcdir/tests/arabic tests/yarabic tests/yarabic || exit 1
 
-echo && echo "*** ofm2opl yarabic.tfm xyarabic"
-./omfonts -ofm2opl -verbose tests/yarabic tests/xyarabic || exit 77
+echo && echo "*** ofm2opl yarabic xyarabic"
+./omfonts -ofm2opl -verbose tests/yarabic tests/xyarabic || exit 1
 
-exit 0
-#***************************
+echo && echo "*** opl2ofm xyarabic xyarabic"
+./omfonts -opl2ofm -verbose tests/xyarabic tests/xyarabic || exit 1
 
-diff $srcdir/tests/Cherokee.pl tests/xCherokee.pl || exit 1
+echo && echo "*** ofm2opl xyarabic yyarabic"
+./omfonts -ofm2opl -verbose tests/xyarabic tests/yyarabic || exit 1
 
-  ./omfonts -ovp2ovf -verbose $srcdir/tests/OCherokee tests/OCherokee tests/OCherokee || exit 1
+echo && echo "*** diff xyarabicr.opl yyarabicr.opl"
+diff tests/xyarabic.opl tests/yyarabic.opl || exit 1
 
-  ./omfonts -ofm2opl -verbose tests/OCherokee tests/OCherokee || exit 1
+echo && echo "*** ovf2ovp yarabic yarabic yyarabic"
+./omfonts -ovf2ovp -verbose tests/yarabic tests/yarabic tests/yyarabic || exit 1
 
-  ./omfonts -opl2ofm -verbose tests/OCherokee tests/xOCherokee || exit 1
+echo && echo "*** ovp2ovf yyarabic yyarabic yyarabic"
+./omfonts -ovp2ovf -verbose tests/yyarabic tests/yyarabic tests/yyarabic || exit 1
 
-  ./omfonts -ofm2opl -verbose tests/xOCherokee tests/xOCherokee || exit 1
+echo && echo "*** ofm2opl yyarabic xyarabic"
+./omfonts -ofm2opl -verbose tests/yyarabic tests/zyarabic || exit 1
 
-diff tests/OCherokee.opl tests/xOCherokee.opl || exit 1
+echo && echo "*** diff xyarabicr.opl zyarabicr.opl"
+diff tests/xyarabic.opl tests/zyarabic.opl || exit 1
 
-  ./omfonts -ovf2ovp -verbose tests/OCherokee tests/OCherokee tests/xOCherokee || exit 1
+echo && echo "*** ovf2ovp yyarabic yyarabic zyarabic"
+./omfonts -ovf2ovp -verbose tests/yyarabic tests/yyarabic tests/zyarabic || exit 1
 
-diff $srcdir/tests/OCherokee.ovp tests/xOCherokee.ovp || exit 1
+echo && echo "*** diff yyarabicr.ovp yyarabicr.ovp"
+diff tests/yyarabic.ovp tests/zyarabic.ovp || exit 1
 
